package ca.mcmaster.cas.se2aa4.a2.island.Visualizer;

import ca.mcmaster.cas.se2aa4.a2.island.Island.Island;

/**
 * Visualizer interface allows all Heatmaps to be processed when called upon
 */

public interface Visualizer {
    void process(Island island);
}
